# web-backend-api

./: CLAUDE.md  Cargo.toml  README.md  env.exmaple
.github/workflows/: ci.yml
.sqlx/: query-79476ed9cbfad90f1919db4d6429cc5c377e56ccddd2c227654d8babcf87d667.json  query-81fc0e250f1aa7c59719c1d5eebb63654c9d23cd20c2b7cb726685a66ede50da.json  query-a22bb726bf64af4a77ac3f7d7d5a6c4cfe8450a8775de992e1ddb8b49bd33a2e.json  query-c0793f2191b5338a66dea075591976295eb7c86414d15b9f06f3f62730b69b24.json  query-d50507f14d0846215a4e240a79de90d65dc0768c16bb789427e24f3b9a813a65.json  query-d5fd64d7b0a01edaeced5237965a4f286bd4db566b6ba42a2ed5e61d532cf930.json  query-eeb1f497c37774190e710a56d8d3815f18ba5b5d1cca0814aba22809a373dfe8.json
crates/api/: Cargo.toml
crates/api/src/: cursor.rs  error.rs  lib.rs  main.rs  shutdown.rs  state.rs
crates/api/src/dtos/: auth.rs  common.rs  user.rs
crates/api/src/extractors/: mod.rs
crates/api/src/handlers/: AGENTS.md  health.rs  mod.rs  users.rs
crates/api/src/handlers/auth/: mod.rs
crates/api/src/handlers/users/: cursor.rs  mod.rs
crates/api/src/middleware/: auth.rs  cors.rs  mod.rs  timing.rs
crates/api/src/routes/: mod.rs
crates/api/tests/: health.rs
crates/api/tests/api/: auth.rs  common.rs  health.rs  main.rs  users.rs
crates/api/tests/common/: mod.rs
crates/api/tests/integration/: auth.rs  common.rs  main.rs  users.rs
crates/api/tests/integration/fixtures/: users.sql
crates/domain/: Cargo.toml
crates/domain/src/: AGENTS.md  error.rs  lib.rs
crates/domain/src/models/: user.rs
crates/domain/src/ports/: health_indicator.rs  mod.rs  password_hasher.rs  user_repository.rs
crates/domain/src/users/: errors.rs  mod.rs  model.rs  port.rs  service.rs
crates/infra/: Cargo.toml
crates/infra/src/: AGENTS.md  db.rs  lib.rs
crates/infra/src/repositories/: user_repository.rs
crates/infra/src/security/: password_hasher.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  observability.rs
migrations/: 20260521103426_users.sql  20260522031033_updated_at_trigger.sql  20260525000000_users_search_sort_indexes.sql  20260601000000_add_role_and_name_to_users.sql
scripts/: seed_users.sh
