[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
anyhow = "1.0.102"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
dotenvy = "0.15.7"
config = "0.15.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
secrecy = { version = "0.10", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
tokio-util = { version = "0.7", features = ["rt"] }
http-body-util = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
async-trait = "0.1"
validator = { version = "0.19", features = ["derive"] }
base64 = "0.22"
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[profile.release]
opt-level = "z"    # optimize for size
lto = true         # link-time optimization
codegen-units = 1  # better optimization, slower compile
strip = true       # strip debug symbols
