[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
serde.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
# crate workspace
shared = { path = "../shared" }
infra = { path = "../infra" }

[dev-dependencies]
tower.workspace = true
sqlx.workspace = true
secrecy.workspace = true
