[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
anyhow.workspace = true
secrecy.workspace = true
shared = { path = "../shared" }
domain = { path = "../domain" }
argon2.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
